# db-tools

./: .gitignore  .pre-commit-config.yaml  README.md  devenv.nix  pyproject.toml
scripts/: backup_schema.sh  del_obsraw.sh  del_stn_health.sh  dump_obs.py  dump_stn.py  dump_stn.sh  dump_stn.sh.bak  dump_stn_health.py  obs_qaqc.py
scripts/helpers/: db.py  qc2_config.csv
scripts/helpers/qaqc/: obs_qc0_splitstn.py  obs_qc1_missing.py  obs_qc2_values.py  obs_qc3_hourly.py  obs_qc4_change.py
tests/: test_dump_obs.py  test_obs.py
