[project]
name = "db-tools"
version = "0.1.0"
description = "DB tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy<2",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.41",
]

[tool.ruff]
target-version = "py311"

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.uv]
dev-dependencies = [
  "pytest-mock>=3.10",
  "pytest>=7.4,<8",
]

[tool.pytest.ini_options]
pythonpath = "scripts"
filterwarnings = [
  "ignore::pandas.errors.SettingWithCopyWarning",
]
